examples/traffic-mirroring-and-rewriting/example/proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: prod
                  request_mirror_policy:
                    cluster: staging
          http_filters:
          - name: envoy.router
  clusters:
  - name: prod
    type: LOGICAL_DNS
    connect_timeout: 1s
    hosts: [{ socket_address: { address: prod-backend, port_value: 8080 }}]
  - name: staging
    type: LOGICAL_DNS
    connect_timeout: 1s
    hosts: [{ socket_address: { address: mirrorplane, port_value: 8080 }}]
